# pulsar-functions-wasm-runtime

./: .gitignore  Cargo.toml  README.md  exclamation.wasm
examples/exclamation/: Cargo.toml
examples/exclamation/src/: main.rs
instance/: Cargo.toml
instance/src/: main.rs
proto/: Cargo.toml
proto-compiler/: Cargo.toml
proto-compiler/src/: constants.rs  functions.rs  main.rs
proto/src/: lib.rs  pulsar.rs
proto/src/prost/: google.protobuf.rs  proto.rs
runtime/: Cargo.toml
wit-bindings/: README.md
wit-bindings/export/: Cargo.toml
wit-bindings/export/src/context/: bindings.rs  mod.rs
wit-bindings/import/: Cargo.toml
wit-bindings/import/src/: context.wit
wit-bindings/import/src/context/: mod.rs
