[package]
name = "pulsar-functions-wasm-instance"
version = "0.1.0"
authors = ["Rui Fu <rfu@streamnative.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
pulsar-functions-proto = { path = "../proto" }