[package]
name = "pulsar-functions-wasm-instance"
version = "0.1.0"
authors = ["Rui Fu <rfu@streamnative.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pulsar-functions-proto = { path = "../proto" }
futures = "0.3"
pulsar = "5.0"
tokio = { version = "1.0", features = ["full"] }
wasmtime = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.56"
wasmtime-wasi = "4.0.0"
wasi-common = "4.0.0"

[dev-dependencies]
env_logger = "^0.9.1"