[package]
name = "pfwasm-wit-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-host-wasmtime-rust = { git = "https://github.com/freeznet/wit-bindgen", branch = "pfwasm"}

[dev-dependencies]
pfwasm-bindings = { path = "../import" }
